handle content types explicity; fix for FABRICTHREE-285